app/styles/templates/_review_offer.scss
.review_offer {
  .tabs-content {
    background-color: inherit;
    color: inherit;
  }

  .message-textbar{
    position: relative;
  }

  .review_message div {
    display: inline;
  }

  .start_review_link {
    text-decoration: underline;
  }

  .waiting {
    cursor: default;
    .offer-status {
      opacity: 0.8;
      img {
        position: fixed;
        padding-left: 0.5rem;
        padding-top: 0.3rem;
      }
    }
  }

  .tab_row {
    margin-bottom: 0.5rem;
    .tabs {
      margin-left: -0.7rem;
      margin-right: -0.7rem;
      border-bottom: 1px solid #334f75;
      dd.active {
        border-bottom: 3px solid #334f75;
        a:after {
          border-width: 0px;
        }
      }
    }
  }

}

.review_offer_options {
  .options {
    float: right;
    margin-top: 0.35rem;
    font-size: 1.1rem;
    margin-right: 0.5rem;
    padding: 0.5rem;
  }

  .options_menu_list {
    width: 12rem;
    margin-left: -6rem;
    background-color: #002136;
    margin-top: 2.5rem;
    position: absolute;
    z-index: 100;

    @media #{$small-only} {
      width: 10.5rem;
      margin-left: -5rem;
    }

    // box-shadow style
    -webkit-box-shadow: -8px 8px 25px 1px rgba(0,0,0,0.75);
    -moz-box-shadow: -8px 8px 25px 1px rgba(0,0,0,0.75);
    box-shadow: -8px 8px 25px 1px rgba(0,0,0,0.75);

    .option_menu {
      padding: 0 1rem;

      i {
        margin-right: 0.5rem;
      }
    }

    .add_item_option {
      border-bottom: 0.1rem solid #334f75;
    }

    a {
      float: none;

      @media #{$small-only} {
        font-size: 0.85rem;
      }
    }
  }
}

#confirmOfferCancelModal {
  input {
    margin-bottom: 1rem;
  }
}

#confirmOfferInactiveModal {
  textarea {
    margin: 0;
    max-width: 100%;
    padding: 0.5rem;
    overflow: hidden;
  }
}

